--- a/service/api/build.gradle
+++ b/service/api/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation project(':db')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 test {
