--- a/service/api/src/main/resources/application.yaml
+++ b/service/api/src/main/resources/application.yaml
@@ -11,3 +11,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1q2w3e4r!
+
+token:
+  secret:
+    key: SpringBootJWTHelperTokenSecretKeyValue123!@#
+  access-token:
+    plus-hour: 1
+  refresh-token:
+    plus-hour: 12
