--- a/service/store-admin/build.gradle
+++ b/service/store-admin/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'io.spring.dependency-management'
 }
 
-group = 'org.delivery'
-version = '1.0-SNAPSHOT'
+group 'org.delivery'
+version '1.0-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
@@ -19,16 +19,28 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:24.0.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5
     implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
+
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     implementation project(':db')
+    implementation project(':common')
+
+    // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // swagger
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 }
 
